// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate fiture for 4 teams with 0 extrabye 1`] = `
"(2 1) (4 3)
(3 1) (4 2)
(1 4) (3 2)"
`;

exports[`should generate fiture for 4 teams with 1 extrabye 1`] = `
"(2 1)
(4 3)
(3 1)
(4 2)
(1 4)
(3 2)"
`;

exports[`should generate fiture for 4 teams with 2 extrabye 1`] = `""`;

exports[`should generate fiture for 5 teams with 0 extrabye 1`] = `
"(2 1) (4 3)
(1 5) (3 2)
(5 4) (3 1)
(4 2) (5 3)
(1 4) (2 5)"
`;

exports[`should generate fiture for 5 teams with 1 extrabye 1`] = `
"(2 1)
(4 3)
(1 5)
(3 2)
(5 4)
(3 1)
(4 2)
(2 5)
(1 4)
(5 3)"
`;

exports[`should generate fiture for 5 teams with 2 extrabye 1`] = `""`;

exports[`should generate fiture for 6 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(3 1) (4 2) (-1 -1)
(1 5) (2 6) (-1 -1)
(5 3) (6 4) (-1 -1)
(1 4) (3 2) (-1 -1)"
`;

exports[`should generate fiture for 6 teams with 1 extrabye 1`] = `
"(2 1) (4 3)
(6 5) (3 1)
(4 2) (1 5)
(2 6) (5 3)
(6 4) (3 2)
(1 4) (5 2)
(1 6) (5 4)
(6 3)"
`;

exports[`should generate fiture for 6 teams with 2 extrabye 1`] = `
"(2 1)
(4 3)
(6 5)
(3 1)
(4 2)
(1 5)
(2 6)
(5 3)
(6 4)
(1 4)
(3 2)
(5 2)
(1 6)
(6 3)
(5 4)"
`;

exports[`should generate fiture for 7 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(1 7) (3 2) (5 4)
(7 6) (3 1) (4 2)
(7 5) (1 6) (-1 -1)
(5 2) (6 3) (7 4)
(4 1) (2 6) (5 3)
(2 7) (1 5) (6 4)"
`;

exports[`should generate fiture for 7 teams with 1 extrabye 1`] = `
"(2 1) (4 3)
(6 5) (1 7)
(3 2) (5 4)
(7 6) (3 1)
(4 2) (7 5)
(1 6) (5 2)
(6 3) (7 4)
(4 1) (2 6)
(5 3) (2 7)
(1 5) (3 7)
(6 4)"
`;

exports[`should generate fiture for 7 teams with 2 extrabye 1`] = `
"(2 1)
(4 3)
(6 5)
(1 7)
(3 2)
(5 4)
(7 6)
(3 1)
(4 2)
(7 5)
(1 6)
(5 2)
(6 3)
(7 4)
(4 1)
(2 6)
(5 3)
(2 7)
(1 5)
(3 7)
(6 4)"
`;

exports[`should generate fiture for 8 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(3 1) (4 2) (7 5) (8 6)
(1 4) (3 2) (5 8) (7 6)
(5 1) (6 2) (7 3) (8 4)
(1 6) (2 5) (3 8) (4 7)
(1 7) (2 8) (5 3) (6 4)
(8 1) (7 2) (6 3) (5 4)"
`;

exports[`should generate fiture for 8 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(8 7) (3 1) (4 2)
(7 5) (8 6) (1 4)
(3 2) (5 8) (7 6)
(5 1) (6 2) (7 3)
(8 4) (1 6) (2 5)
(3 8) (4 7) (-1 -1)
(1 7) (2 8) (5 3)
(6 4) (8 1) (7 2)
(6 3)"
`;

exports[`should generate fiture for 8 teams with 2 extrabye 1`] = `
"(2 1) (4 3)
(6 5) (8 7)
(3 1) (4 2)
(7 5) (8 6)
(1 4) (3 2)
(5 8) (7 6)
(5 1) (6 2)
(7 3) (8 4)
(1 6) (2 5)
(3 8) (4 7)
(1 7) (2 8)
(5 3) (6 4)
(8 1) (7 2)
(6 3) (5 4)"
`;

exports[`should generate fiture for 9 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(1 9) (3 2) (5 4) (7 6)
(9 8) (3 1) (4 2) (7 5)
(8 6) (2 9) (1 4) (5 3)
(9 6) (1 7) (2 8) (-1 -1)
(6 3) (7 4) (8 5) (-1 -1)
(3 9) (5 1) (6 2) (4 8)
(9 7) (6 1) (5 2) (8 3)
(9 4) (2 7) (1 8) (-1 -1)"
`;

exports[`should generate fiture for 9 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(8 7) (1 9) (3 2)
(5 4) (7 6) (9 8)
(3 1) (4 2) (7 5)
(8 6) (2 9) (1 4)
(5 3) (9 6) (1 7)
(2 8) (6 3) (7 4)
(8 5) (3 9) (6 1)
(5 2) (4 8) (9 7)
(5 1) (6 2) (7 3)
(9 4) (1 8) (2 7)
(8 3) (4 6) (9 5)"
`;

exports[`should generate fiture for 9 teams with 2 extrabye 1`] = `
"(2 1) (4 3)
(6 5) (8 7)
(1 9) (3 2)
(5 4) (7 6)
(9 8) (3 1)
(4 2) (7 5)
(8 6) (2 9)
(1 4) (5 3)
(9 6) (1 7)
(2 8) (6 3)
(7 4) (8 5)
(3 9) (5 1)
(6 2) (4 8)
(9 7) (6 1)
(5 2) (7 3)
(9 4) (1 8)
(2 7) (8 3)
(4 6) (9 5)"
`;

exports[`should generate fiture for 10 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(3 1) (4 2) (7 5) (8 6) (-1 -1)
(1 9) (2 10) (5 3) (6 4) (-1 -1)
(9 7) (10 8) (1 4) (3 2) (-1 -1)
(5 8) (7 6) (9 2) (1 10) (-1 -1)
(6 3) (5 4) (10 7) (9 8) (-1 -1)
(5 1) (2 6) (7 3) (8 4) (-1 -1)
(3 9) (4 10) (6 1) (2 5) (-1 -1)
(1 7) (8 2) (4 9) (3 10) (-1 -1)"
`;

exports[`should generate fiture for 10 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(10 9) (3 1) (4 2) (7 5)
(8 6) (1 9) (2 10) (5 3)
(6 4) (9 7) (10 8) (5 1)
(3 2) (7 4) (9 6) (1 8)
(3 10) (5 2) (8 4) (7 6)
(2 9) (1 10) (6 3) (4 5)
(10 7) (9 8) (4 1) (6 2)
(7 3) (8 5) (9 4) (10 6)
(1 7) (2 8) (3 9) (5 10)
(6 1) (7 2) (8 3) (10 4)
(9 5)"
`;

exports[`should generate fiture for 10 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(8 7) (10 9) (3 1)
(4 2) (7 5) (8 6)
(1 9) (2 10) (5 3)
(6 4) (9 7) (10 8)
(1 4) (3 2) (5 8)
(7 6) (9 2) (1 10)
(6 3) (5 4) (10 7)
(9 8) (5 1) (2 6)
(7 3) (8 4) (9 5)
(3 10) (6 1) (7 2)
(4 9) (1 8) (10 5)
(8 2) (3 9) (4 7)
(10 6) (7 1) (2 5)
(8 3) (4 10) (9 6)"
`;

exports[`should generate fiture for 11 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(1 11) (3 2) (5 4) (7 6) (9 8)
(11 10) (3 1) (4 2) (7 5) (8 6)
(11 9) (1 10) (5 2) (6 3) (7 4)
(10 8) (9 1) (2 11) (5 3) (6 4)
(9 7) (11 8) (2 10) (4 1) (-1 -1)
(3 7) (8 5) (9 6) (10 4) (-1 -1)
(3 11) (1 5) (6 2) (10 7) (4 8)
(2 9) (5 11) (1 6) (8 3) (-1 -1)
(11 7) (3 9) (5 10) (8 1) (-1 -1)
(7 2) (9 4) (10 6) (-1 -1) (-1 -1)"
`;

exports[`should generate fiture for 11 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(10 9) (1 11) (3 2) (5 4)
(7 6) (9 8) (11 10) (3 1)
(4 2) (7 5) (8 6) (11 9)
(1 10) (5 2) (6 3) (7 4)
(10 8) (9 1) (2 11) (5 3)
(6 4) (9 7) (11 8) (2 10)
(4 1) (3 7) (8 5) (9 6)
(10 3) (4 11) (1 5) (6 2)
(10 7) (1 8) (2 9) (3 11)
(8 4) (5 9) (10 6) (11 7)
(6 1) (7 2) (8 3) (9 4)
(5 10) (11 6) (7 1) (2 8)
(3 9) (4 10) (11 5)"
`;

exports[`should generate fiture for 11 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5)
(8 7) (10 9) (1 11)
(3 2) (5 4) (7 6)
(9 8) (11 10) (3 1)
(4 2) (7 5) (8 6)
(11 9) (1 10) (5 2)
(6 3) (7 4) (10 8)
(9 1) (2 11) (5 3)
(6 4) (9 7) (11 8)
(2 10) (4 1) (3 7)
(8 5) (9 6) (10 3)
(4 11) (1 5) (6 2)
(10 7) (1 8) (2 9)
(3 11) (8 4) (5 9)
(10 6) (11 7) (8 2)
(6 1) (9 3) (4 10)
(11 5) (7 1) (3 8)
(7 2) (9 4) (5 10)
(11 6)"
`;

exports[`should generate fiture for 12 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10)
(1 4) (3 2) (5 8) (7 6) (9 12) (11 10)
(5 1) (6 2) (7 3) (8 4) (-1 -1) (-1 -1)
(1 9) (2 10) (3 11) (4 12) (-1 -1) (-1 -1)
(9 5) (10 6) (11 7) (12 8) (-1 -1) (-1 -1)
(6 1) (5 2) (8 3) (7 4) (-1 -1) (-1 -1)
(2 9) (1 10) (4 11) (3 12) (-1 -1) (-1 -1)
(10 5) (9 6) (12 7) (11 8) (-1 -1) (-1 -1)
(1 7) (2 8) (5 3) (6 4) (-1 -1) (-1 -1)
(9 3) (10 4) (1 11) (2 12) (-1 -1) (-1 -1)"
`;

exports[`should generate fiture for 12 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(12 11) (3 1) (4 2) (7 5) (8 6)
(11 9) (12 10) (1 4) (3 2) (5 8)
(7 6) (9 12) (11 10) (5 1) (2 8)
(6 3) (7 4) (1 9) (10 2) (5 11)
(3 12) (6 4) (9 7) (10 8) (1 11)
(2 12) (5 3) (8 4) (9 6) (10 7)
(11 2) (12 1) (7 3) (4 5) (6 10)
(9 8) (3 11) (4 12) (1 6) (2 5)
(11 7) (12 8) (2 9) (1 10) (-1 -1)
(8 3) (9 4) (10 5) (11 6) (12 7)
(7 1) (6 2) (3 9) (4 10) (5 12)
(8 11) (7 2) (10 3) (9 5) (12 6)
(8 1)"
`;

exports[`should generate fiture for 12 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(10 9) (12 11) (3 1) (4 2)
(7 5) (8 6) (11 9) (12 10)
(1 4) (3 2) (5 8) (7 6)
(9 12) (11 10) (5 1) (6 2)
(7 3) (8 4) (1 9) (2 10)
(3 11) (4 12) (9 5) (10 6)
(11 7) (12 8) (6 1) (5 2)
(8 3) (7 4) (2 9) (1 10)
(4 11) (3 12) (10 5) (9 6)
(12 7) (11 8) (5 3) (6 4)
(1 7) (2 8) (9 3) (10 4)
(1 11) (2 12) (4 5) (3 6)
(9 7) (10 8) (11 2) (12 1)
(5 11) (6 12) (7 10) (8 9)
(8 1) (7 2) (10 3) (9 4)
(12 5) (11 6)"
`;

exports[`should generate fiture for 13 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(1 13) (3 2) (5 4) (7 6) (9 8) (11 10)
(13 12) (3 1) (4 2) (7 5) (8 6) (11 9)
(12 10) (2 13) (1 4) (5 3) (9 6) (11 7)
(10 8) (1 12) (13 3) (5 2) (6 4) (9 7)
(8 11) (13 10) (2 12) (5 1) (6 3) (7 4)
(12 8) (13 9) (10 1) (2 11) (3 7) (-1 -1)
(4 8) (9 5) (10 6) (11 13) (3 12) (7 1)
(6 2) (4 9) (8 5) (3 10) (1 11) (12 7)
(4 13) (8 2) (10 5) (11 6) (12 9) (-1 -1)
(5 13) (6 1) (7 2) (8 3) (10 4) (-1 -1)
(1 9) (3 11) (4 12) (13 6) (2 10) (-1 -1)
(11 5) (13 7) (1 8) (9 2) (6 12) (-1 -1)"
`;

exports[`should generate fiture for 13 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(12 11) (1 13) (3 2) (5 4) (7 6)
(9 8) (11 10) (13 12) (3 1) (4 2)
(7 5) (8 6) (11 9) (12 10) (2 13)
(1 4) (5 3) (9 6) (10 7) (11 8)
(1 12) (13 3) (5 2) (6 4) (9 7)
(10 8) (13 11) (2 12) (5 1) (6 3)
(7 4) (12 8) (13 9) (1 10) (2 11)
(3 7) (8 4) (9 5) (10 6) (11 1)
(3 12) (4 13) (6 2) (8 5) (7 11)
(12 9) (13 10) (6 1) (7 2) (8 3)
(4 9) (10 5) (3 11) (12 6) (7 13)
(1 8) (9 2) (4 10) (11 5) (12 7)
(5 13) (9 1) (2 8) (10 3) (11 4)
(13 6) (4 12) (1 7) (2 10) (3 9)
(5 12) (6 11) (8 13)"
`;

exports[`should generate fiture for 13 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7)
(10 9) (12 11) (1 13) (3 2)
(5 4) (7 6) (9 8) (11 10)
(13 12) (3 1) (4 2) (7 5)
(8 6) (11 9) (12 10) (2 13)
(1 4) (5 3) (9 6) (10 7)
(11 8) (1 12) (13 3) (5 2)
(6 4) (9 7) (10 8) (13 11)
(2 12) (5 1) (6 3) (7 4)
(12 8) (13 9) (1 10) (2 11)
(3 7) (8 4) (9 5) (10 6)
(11 1) (3 12) (4 13) (6 2)
(8 5) (7 11) (12 9) (13 10)
(6 1) (7 2) (8 3) (4 9)
(10 5) (3 11) (4 12) (6 13)
(1 7) (2 8) (11 5) (9 3)
(2 10) (5 12) (7 13) (8 1)
(10 4) (11 6) (1 9) (12 7)
(5 13) (9 2) (3 10) (4 11)
(12 6) (13 8)"
`;

exports[`should generate fiture for 14 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (-1 -1)
(1 13) (2 14) (5 3) (6 4) (9 7) (10 8) (-1 -1)
(13 11) (14 12) (1 4) (3 2) (5 8) (7 6) (-1 -1)
(9 12) (11 10) (13 2) (1 14) (6 3) (5 4) (-1 -1)
(10 7) (9 8) (14 11) (13 12) (5 1) (2 6) (-1 -1)
(7 3) (8 4) (13 9) (14 10) (11 1) (12 2) (-1 -1)
(3 8) (4 7) (9 5) (10 6) (2 11) (1 12) (-1 -1)
(3 13) (4 14) (10 5) (6 9) (11 7) (12 8) (-1 -1)
(4 13) (3 14) (6 1) (5 2) (7 12) (8 11) (-1 -1)
(14 9) (13 10) (7 1) (8 2) (11 3) (12 4) (-1 -1)
(13 5) (14 6) (1 9) (2 10) (12 3) (11 4) (-1 -1)
(5 14) (6 13) (2 7) (1 8) (9 3) (4 10) (-1 -1)"
`;

exports[`should generate fiture for 14 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(14 13) (3 1) (4 2) (7 5) (8 6) (11 9)
(12 10) (1 13) (2 14) (5 3) (6 4) (9 7)
(10 8) (13 11) (14 12) (1 4) (3 2) (9 5)
(7 6) (11 8) (13 10) (1 12) (3 14) (5 2)
(7 4) (9 6) (12 8) (11 10) (2 13) (14 1)
(6 3) (5 4) (10 7) (8 9) (14 11) (13 12)
(5 1) (6 2) (7 3) (4 8) (12 9) (10 14)
(1 11) (3 13) (2 7) (9 4) (8 5) (10 6)
(11 2) (3 12) (4 13) (5 14) (6 1) (-1 -1)
(11 7) (13 8) (14 9) (1 10) (2 12) (-1 -1)
(8 3) (4 10) (11 5) (12 6) (13 7) (9 1)
(4 14) (8 2) (9 3) (10 5) (6 11) (7 12)
(5 13) (14 6) (7 1) (2 9) (3 10) (11 4)
(14 8) (12 4) (13 6) (10 2) (3 11) (-1 -1)
(1 8)"
`;

exports[`should generate fiture for 14 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(12 11) (14 13) (3 1) (4 2) (7 5)
(8 6) (11 9) (12 10) (1 13) (2 14)
(5 3) (6 4) (9 7) (10 8) (13 11)
(14 12) (1 4) (3 2) (5 8) (7 6)
(9 12) (11 10) (13 2) (1 14) (6 3)
(5 4) (10 7) (9 8) (14 11) (13 12)
(5 1) (2 6) (7 3) (8 4) (13 9)
(14 10) (11 1) (12 2) (3 8) (4 7)
(9 5) (10 6) (2 11) (1 12) (3 13)
(4 14) (10 5) (6 9) (11 7) (12 8)
(4 13) (3 14) (6 1) (5 2) (7 12)
(8 11) (14 9) (13 10) (7 1) (12 3)
(8 2) (9 4) (11 5) (13 6) (1 10)
(5 14) (2 7) (9 3) (10 4) (11 6)
(8 13) (4 12) (6 14) (1 9) (2 10)
(3 11) (12 5) (7 13) (14 8) (9 2)
(8 1) (10 3) (11 4) (13 5) (12 6)
(14 7)"
`;

exports[`should generate fiture for 15 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(1 15) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12)
(15 14) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10)
(15 13) (1 14) (5 2) (6 3) (7 4) (10 8) (9 12)
(13 11) (2 14) (3 15) (4 1) (8 5) (9 6) (10 7)
(14 11) (15 12) (1 13) (6 2) (5 3) (8 4) (9 7)
(13 10) (11 15) (14 12) (5 1) (2 7) (3 8) (6 4)
(13 9) (14 10) (1 11) (12 2) (4 15) (7 3) (-1 -1)
(9 5) (10 6) (11 8) (12 1) (2 13) (3 14) (15 7)
(4 9) (10 5) (11 6) (12 8) (13 3) (7 14) (2 15)
(6 1) (10 4) (5 11) (8 13) (14 9) (3 12) (-1 -1)
(15 5) (1 7) (8 2) (11 4) (12 6) (9 3) (-1 -1)
(15 10) (4 13) (5 14) (1 8) (2 9) (7 11) (-1 -1)
(13 6) (1 10) (4 12) (14 8) (9 15) (11 2) (-1 -1)
(10 3) (12 5) (6 14) (13 7) (8 15) (9 1) (-1 -1)"
`;

exports[`should generate fiture for 15 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(14 13) (1 15) (3 2) (5 4) (7 6) (9 8)
(11 10) (13 12) (15 14) (3 1) (4 2) (7 5)
(8 6) (11 9) (12 10) (15 13) (1 14) (5 2)
(6 3) (7 4) (10 8) (9 12) (13 11) (2 14)
(3 15) (4 1) (8 5) (9 6) (10 7) (14 11)
(15 12) (1 13) (6 2) (5 3) (8 4) (9 7)
(13 10) (11 15) (14 12) (5 1) (2 7) (3 8)
(6 4) (13 9) (14 10) (1 11) (12 2) (15 5)
(7 3) (4 9) (10 6) (11 8) (12 1) (2 13)
(3 14) (4 15) (9 5) (11 6) (12 7) (13 8)
(15 10) (14 4) (6 1) (8 2) (9 3) (5 11)
(7 13) (1 10) (3 12) (5 14) (2 15) (11 4)
(12 6) (14 7) (15 8) (1 9) (10 2) (13 3)
(10 4) (12 5) (6 13) (7 11) (8 14) (15 9)
(7 1) (2 9) (10 3) (4 12) (13 5) (14 6)
(1 8) (2 11) (6 15) (4 13) (5 10) (9 14)
(11 3) (15 7) (8 12)"
`;

exports[`should generate fiture for 15 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9)
(12 11) (14 13) (1 15) (3 2) (5 4)
(7 6) (9 8) (11 10) (13 12) (15 14)
(3 1) (4 2) (7 5) (8 6) (11 9)
(12 10) (15 13) (1 14) (5 2) (6 3)
(7 4) (10 8) (9 12) (13 11) (2 14)
(3 15) (4 1) (8 5) (9 6) (10 7)
(14 11) (15 12) (1 13) (6 2) (5 3)
(8 4) (9 7) (13 10) (11 15) (14 12)
(5 1) (2 7) (3 8) (6 4) (13 9)
(14 10) (1 11) (12 2) (4 15) (7 3)
(9 5) (10 6) (11 8) (12 1) (2 13)
(3 14) (15 5) (4 9) (11 6) (12 7)
(13 8) (15 10) (14 4) (6 1) (2 9)
(10 3) (5 11) (7 13) (8 12) (6 14)
(2 15) (1 7) (9 3) (10 4) (12 5)
(14 8) (11 2) (3 13) (15 6) (1 9)
(4 11) (5 10) (7 14) (8 15) (3 12)
(13 4) (8 1) (10 2) (14 5) (12 6)
(11 7) (15 9) (5 13) (1 10) (2 8)
(11 3) (4 12) (13 6) (7 15) (9 14)"
`;

exports[`should generate fiture for 16 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14)
(1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14)
(5 1) (6 2) (7 3) (8 4) (13 9) (14 10) (15 11) (16 12)
(1 6) (2 5) (3 8) (4 7) (9 14) (10 13) (11 16) (12 15)
(1 7) (2 8) (5 3) (6 4) (9 15) (10 16) (13 11) (14 12)
(8 1) (7 2) (6 3) (5 4) (16 9) (15 10) (14 11) (13 12)
(9 1) (10 2) (11 3) (12 4) (13 5) (14 6) (15 7) (16 8)
(1 10) (2 9) (3 12) (4 11) (5 14) (6 13) (7 16) (8 15)
(11 1) (12 2) (9 3) (10 4) (15 5) (16 6) (13 7) (14 8)
(1 12) (2 11) (3 10) (4 9) (5 16) (6 15) (7 14) (8 13)
(1 13) (2 14) (3 15) (4 16) (9 5) (10 6) (11 7) (12 8)
(14 1) (13 2) (16 3) (15 4) (10 5) (9 6) (12 7) (11 8)
(1 15) (2 16) (3 13) (4 14) (5 11) (6 12) (7 9) (8 10)
(16 1) (15 2) (14 3) (13 4) (12 5) (11 6) (10 7) (9 8)"
`;

exports[`should generate fiture for 16 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(16 15) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10)
(15 13) (16 14) (1 4) (3 2) (5 8) (7 6) (9 12)
(11 10) (13 16) (15 14) (5 1) (6 2) (7 3) (8 4)
(13 9) (14 10) (15 11) (16 12) (1 6) (2 5) (3 8)
(4 7) (9 14) (10 13) (11 16) (12 15) (1 8) (5 3)
(2 7) (6 4) (9 15) (10 16) (13 11) (14 12) (-1 -1)
(7 1) (8 2) (6 3) (5 4) (16 9) (15 10) (14 11)
(13 12) (9 1) (10 2) (11 3) (4 14) (15 5) (16 6)
(12 7) (13 8) (1 10) (2 9) (3 14) (11 4) (5 16)
(12 6) (7 13) (8 15) (1 11) (14 2) (9 3) (10 4)
(12 5) (6 13) (15 7) (16 8) (14 1) (2 11) (3 10)
(4 9) (13 5) (6 15) (7 16) (8 12) (-1 -1) (-1 -1)
(1 12) (2 13) (3 15) (4 16) (9 5) (10 6) (11 7)
(14 8) (13 1) (12 2) (16 3) (15 4) (5 10) (9 6)
(7 14) (11 8) (1 15) (2 16) (3 12) (4 13) (-1 -1)
(5 11) (6 14) (9 7) (10 8) (16 1) (15 2) (13 3)
(12 4)"
`;

exports[`should generate fiture for 16 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(14 13) (16 15) (3 1) (4 2) (7 5) (8 6)
(11 9) (12 10) (15 13) (16 14) (1 4) (3 2)
(5 8) (7 6) (9 12) (11 10) (13 16) (15 14)
(5 1) (6 2) (7 3) (8 4) (13 9) (14 10)
(15 11) (16 12) (1 6) (2 5) (3 8) (4 7)
(9 14) (10 13) (11 16) (12 15) (1 7) (2 8)
(5 3) (6 4) (9 15) (10 16) (13 11) (14 12)
(8 1) (7 2) (6 3) (5 4) (16 9) (15 10)
(14 11) (13 12) (9 1) (10 2) (3 15) (4 16)
(11 5) (12 6) (13 7) (14 8) (1 10) (2 9)
(11 3) (12 4) (5 13) (6 14) (15 7) (16 8)
(1 11) (2 12) (9 3) (10 4) (14 5) (13 6)
(7 16) (8 15) (12 1) (11 2) (3 10) (4 9)
(15 5) (16 6) (7 14) (8 13) (3 12) (4 11)
(1 13) (2 14) (9 5) (10 6) (11 7) (12 8)
(1 15) (2 16) (13 3) (14 4) (5 10) (6 9)
(9 7) (10 8) (15 2) (16 1) (3 14) (4 13)
(5 12) (6 11) (7 10) (8 9) (4 15) (3 16)
(14 1) (13 2) (16 5) (15 6) (12 7) (11 8)"
`;

exports[`should generate fiture for 17 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(1 17) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14)
(17 16) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13)
(16 14) (2 17) (1 4) (5 3) (9 6) (10 7) (11 8) (15 12)
(13 16) (17 14) (5 1) (6 2) (7 3) (8 4) (12 9) (10 15)
(13 11) (14 1) (2 16) (3 17) (6 4) (8 5) (9 7) (-1 -1)
(13 10) (14 11) (16 12) (17 15) (1 6) (5 2) (3 8) (4 7)
(9 13) (14 10) (15 11) (17 12) (1 16) (7 2) (6 3) (-1 -1)
(4 9) (10 5) (12 8) (16 11) (17 13) (2 14) (1 15) (-1 -1)
(9 3) (10 4) (11 5) (12 6) (13 7) (14 8) (2 15) (-1 -1)
(3 16) (4 17) (7 1) (5 9) (6 10) (8 13) (11 2) (14 12)
(15 3) (16 4) (5 17) (8 1) (11 6) (12 7) (9 14) (2 10)
(1 13) (4 15) (16 5) (6 17) (10 3) (7 11) (2 8) (-1 -1)
(15 9) (1 12) (3 13) (4 14) (6 16) (17 7) (10 8) (-1 -1)
(12 5) (16 9) (17 11) (13 2) (3 14) (15 6) (10 1) (-1 -1)
(11 4) (13 5) (14 7) (8 15) (9 17) (2 12) (16 10) (-1 -1)
(9 1) (11 3) (12 4) (5 14) (13 6) (7 15) (8 16) (17 10)"
`;

exports[`should generate fiture for 17 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(16 15) (1 17) (3 2) (5 4) (7 6) (9 8) (11 10)
(13 12) (15 14) (17 16) (3 1) (4 2) (7 5) (8 6)
(11 9) (12 10) (15 13) (16 14) (2 17) (1 4) (5 3)
(9 6) (10 7) (11 8) (14 12) (13 16) (17 15) (5 1)
(6 2) (7 3) (8 4) (12 9) (13 10) (14 11) (1 15)
(2 16) (3 17) (6 4) (8 5) (9 7) (10 14) (13 11)
(15 12) (16 1) (4 17) (5 2) (6 3) (11 7) (10 8)
(9 13) (16 12) (17 14) (2 15) (1 6) (3 8) (7 4)
(9 5) (15 10) (16 11) (17 12) (1 13) (14 2) (-1 -1)
(3 9) (4 10) (11 5) (12 6) (13 7) (14 8) (-1 -1)
(15 3) (4 16) (5 17) (7 1) (8 2) (10 6) (14 9)
(15 11) (12 1) (17 13) (3 16) (2 7) (9 4) (10 5)
(6 11) (12 8) (2 13) (1 14) (4 15) (5 16) (7 17)
(10 3) (13 6) (8 15) (16 9) (17 11) (2 12) (4 14)
(8 1) (11 3) (12 5) (6 14) (15 7) (17 9) (16 10)
(3 13) (9 1) (10 2) (11 4) (14 5) (6 15) (7 12)
(13 8) (6 16) (17 10) (1 11) (9 2) (12 3) (5 15)
(13 4) (14 7) (16 8) (6 17) (1 10) (11 2) (15 9)
(3 14) (4 12) (5 13)"
`;

exports[`should generate fiture for 17 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11)
(14 13) (16 15) (1 17) (3 2) (5 4) (7 6)
(9 8) (11 10) (13 12) (15 14) (17 16) (3 1)
(4 2) (7 5) (8 6) (11 9) (12 10) (15 13)
(16 14) (2 17) (1 4) (5 3) (9 6) (10 7)
(11 8) (14 12) (13 16) (17 15) (5 1) (6 2)
(7 3) (8 4) (12 9) (13 10) (14 11) (1 15)
(2 16) (3 17) (6 4) (8 5) (9 7) (10 14)
(13 11) (15 12) (16 1) (4 17) (5 2) (6 3)
(11 7) (10 8) (9 13) (16 12) (17 14) (2 15)
(1 6) (3 8) (7 4) (9 5) (15 10) (16 11)
(17 12) (1 13) (14 2) (3 9) (4 10) (11 5)
(12 6) (13 7) (14 8) (15 3) (4 16) (5 17)
(7 1) (8 2) (10 6) (14 9) (15 11) (12 3)
(17 13) (5 16) (8 1) (2 7) (9 4) (6 11)
(16 10) (1 12) (2 13) (3 14) (4 15) (6 17)
(10 5) (12 7) (13 8) (15 9) (17 11) (1 14)
(3 16) (9 2) (11 4) (12 5) (13 6) (7 14)
(8 15) (17 10) (6 16) (9 1) (11 2) (13 3)
(4 12) (14 5) (7 15) (16 8) (10 1) (17 9)
(2 10) (11 3) (4 13) (5 15) (14 6) (16 7)
(12 8) (7 17) (1 11) (10 3) (14 4) (5 13)
(2 12) (15 6) (8 17) (16 9)"
`;

exports[`should generate fiture for 18 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (-1 -1)
(1 17) (2 18) (5 3) (6 4) (9 7) (10 8) (13 11) (14 12) (-1 -1)
(17 15) (18 16) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (-1 -1)
(13 16) (15 14) (17 2) (1 18) (6 3) (5 4) (10 7) (9 8) (-1 -1)
(14 11) (13 12) (18 15) (17 16) (5 1) (2 6) (7 3) (8 4) (-1 -1)
(13 9) (14 10) (15 11) (16 12) (3 17) (4 18) (6 1) (2 5) (-1 -1)
(11 7) (12 8) (9 14) (10 13) (1 15) (16 2) (4 17) (3 18) (-1 -1)
(9 5) (10 6) (12 7) (11 8) (17 13) (18 14) (15 2) (1 16) (-1 -1)
(8 3) (7 4) (5 10) (6 9) (16 11) (15 12) (18 13) (17 14) (-1 -1)
(7 1) (8 2) (3 9) (4 10) (11 5) (12 6) (-1 -1) (-1 -1) (-1 -1)
(13 1) (2 14) (3 15) (4 16) (5 17) (6 18) (-1 -1) (-1 -1) (-1 -1)
(13 7) (14 8) (15 9) (16 10) (17 11) (18 12) (-1 -1) (-1 -1) (-1 -1)
(8 1) (7 2) (10 3) (9 4) (12 5) (11 6) (-1 -1) (-1 -1) (-1 -1)
(2 13) (1 14) (4 15) (3 16) (6 17) (5 18) (-1 -1) (-1 -1) (-1 -1)
(14 7) (13 8) (16 9) (15 10) (18 11) (17 12) (-1 -1) (-1 -1) (-1 -1)
(9 1) (10 2) (11 3) (12 4) (13 5) (14 6) (7 15) (8 16) (-1 -1)"
`;

exports[`should generate fiture for 18 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(18 17) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13)
(16 14) (1 17) (2 18) (5 3) (6 4) (9 7) (10 8) (13 11)
(14 12) (17 15) (18 16) (1 4) (3 2) (5 8) (7 6) (13 9)
(11 10) (15 12) (17 14) (1 16) (3 18) (5 2) (7 4) (9 6)
(11 8) (13 10) (16 12) (15 14) (2 17) (18 1) (6 3) (4 5)
(10 7) (9 8) (14 11) (12 13) (18 15) (17 16) (5 1) (6 2)
(7 3) (8 4) (12 9) (14 10) (15 11) (16 13) (17 5) (6 18)
(1 7) (8 2) (9 3) (10 4) (11 16) (17 12) (13 18) (5 14)
(1 15) (2 7) (3 8) (4 9) (10 6) (11 17) (18 12) (13 5)
(14 1) (2 15) (3 16) (4 11) (12 6) (7 13) (8 17) (9 18)
(15 10) (2 14) (16 4) (6 1) (11 3) (9 5) (12 7) (13 8)
(16 10) (18 14) (3 15) (4 17) (8 1) (9 2) (5 11) (13 6)
(14 7) (17 10) (1 12) (15 4) (2 16) (5 18) (3 13) (11 6)
(7 15) (12 8) (14 9) (10 18) (16 5) (17 3) (1 11) (13 2)
(4 12) (6 14) (7 16) (15 8) (17 9) (10 1) (18 11) (-1 -1)
(10 2) (12 3) (4 13) (15 5) (16 6) (7 17) (8 14) (1 9)
(18 4) (11 2) (3 10) (5 12) (6 15) (8 16) (17 13) (-1 -1)
(18 7) (9 15) (14 3) (13 1) (2 12) (10 5) (6 17) (-1 -1)
(14 4)"
`;

exports[`should generate fiture for 18 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(16 15) (18 17) (3 1) (4 2) (7 5) (8 6) (11 9)
(12 10) (15 13) (16 14) (1 17) (2 18) (5 3) (6 4)
(9 7) (10 8) (13 11) (14 12) (17 15) (18 16) (1 4)
(3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14)
(17 2) (1 18) (6 3) (5 4) (10 7) (9 8) (14 11)
(13 12) (18 15) (17 16) (5 1) (2 6) (7 3) (8 4)
(13 9) (14 10) (15 11) (16 12) (3 17) (4 18) (6 1)
(2 5) (11 7) (12 8) (9 14) (10 13) (1 15) (3 16)
(4 17) (18 5) (7 2) (9 6) (11 8) (15 10) (12 1)
(17 13) (18 14) (16 2) (8 3) (7 4) (5 9) (10 6)
(16 11) (15 12) (13 18) (17 14) (1 7) (8 2) (3 9)
(4 10) (11 5) (12 6) (1 13) (2 14) (3 15) (7 16)
(5 17) (6 18) (9 4) (13 8) (16 10) (11 1) (2 12)
(14 3) (4 15) (6 17) (18 7) (10 5) (8 16) (1 9)
(17 11) (12 18) (2 13) (14 4) (15 5) (10 3) (16 6)
(12 7) (14 8) (15 9) (18 11) (3 13) (17 10) (16 1)
(9 2) (11 4) (5 12) (13 6) (7 14) (8 15) (3 18)
(7 17) (8 1) (10 2) (4 12) (13 5) (6 11) (9 16)
(1 14) (2 15) (17 8) (18 9) (11 3) (4 13) (5 16)
(14 6) (15 7) (18 10) (12 17) (11 2) (16 4) (-1 -1)
(10 1) (12 3) (14 5) (6 15) (13 7) (8 18)"
`;

exports[`should generate fiture for 19 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(1 19) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14) (17 16)
(19 18) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14)
(19 17) (1 18) (5 2) (6 3) (7 4) (10 8) (9 12) (13 11) (-1 -1)
(17 14) (18 15) (19 16) (4 1) (2 6) (5 3) (9 7) (11 8) (13 10)
(14 12) (17 15) (18 16) (2 19) (1 5) (3 7) (6 4) (8 13) (-1 -1)
(14 9) (15 10) (16 11) (12 17) (2 18) (3 19) (6 1) (8 4) (13 5)
(10 7) (15 9) (14 11) (16 12) (1 17) (18 3) (4 19) (8 2) (13 6)
(9 5) (11 7) (10 14) (12 15) (1 16) (17 2) (4 18) (19 6) (3 8)
(5 10) (7 12) (9 13) (15 11) (18 14) (2 16) (17 3) (19 8) (-1 -1)
(7 1) (9 4) (11 5) (10 6) (12 18) (16 13) (14 19) (2 15) (8 17)
(1 9) (10 3) (11 4) (5 12) (6 14) (13 7) (19 15) (16 8) (-1 -1)
(4 17) (5 18) (10 1) (7 2) (3 9) (6 11) (12 19) (14 8) (-1 -1)
(17 13) (15 1) (3 16) (18 6) (9 2) (4 10) (14 5) (19 7) (8 12)
(17 11) (18 13) (15 3) (16 4) (12 1) (2 10) (5 19) (6 9) (7 14)
(11 18) (1 13) (4 15) (5 16) (6 17) (12 2) (14 3) (19 9) (-1 -1)
(15 7) (18 8) (16 10) (1 11) (13 2) (17 5) (3 12) (14 4) (-1 -1)
(15 6) (7 16) (8 1) (9 17) (10 18) (11 19) (13 3) (2 14) (12 4)
(8 5) (16 6) (17 7) (18 9) (19 10) (2 11) (4 13) (1 14) (-1 -1)"
`;

exports[`should generate fiture for 19 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(18 17) (1 19) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12)
(15 14) (17 16) (19 18) (3 1) (4 2) (7 5) (8 6) (11 9)
(12 10) (15 13) (16 14) (19 17) (1 18) (5 2) (6 3) (7 4)
(10 8) (9 12) (13 11) (17 14) (18 15) (19 16) (4 1) (2 6)
(5 3) (9 7) (11 8) (13 10) (14 12) (17 15) (18 16) (2 19)
(1 5) (3 7) (6 4) (12 8) (13 9) (14 10) (15 11) (16 2)
(1 17) (3 18) (4 19) (8 5) (9 6) (10 7) (14 11) (15 12)
(16 13) (2 17) (18 4) (19 3) (6 1) (5 9) (11 7) (8 14)
(10 15) (12 16) (17 13) (2 18) (5 19) (7 1) (8 3) (9 4)
(10 6) (16 11) (17 12) (18 13) (19 14) (1 15) (7 2) (3 9)
(4 8) (10 5) (11 6) (12 18) (13 19) (14 1) (15 2) (3 16)
(4 17) (11 5) (6 12) (13 7) (15 8) (14 9) (16 10) (-1 -1)
(17 3) (5 18) (6 19) (8 1) (9 2) (10 4) (12 7) (-1 -1)
(17 11) (1 13) (18 14) (19 15) (4 16) (2 8) (3 10) (12 5)
(13 6) (7 14) (15 9) (18 11) (1 16) (5 17) (8 19) (2 10)
(11 3) (12 4) (14 6) (7 15) (16 9) (2 13) (8 17) (10 18)
(19 7) (9 1) (3 12) (11 4) (13 5) (6 15) (14 2) (16 8)
(6 17) (7 18) (9 19) (1 10) (13 3) (4 14) (15 5) (2 11)
(19 12) (5 16) (17 7) (18 6) (11 1) (14 3) (4 13) (-1 -1)
(18 8) (17 9) (19 10) (1 12) (3 15) (6 16) (5 14) (-1 -1)
(12 2) (15 4) (16 7)"
`;

exports[`should generate fiture for 19 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13)
(16 15) (18 17) (1 19) (3 2) (5 4) (7 6) (9 8)
(11 10) (13 12) (15 14) (17 16) (19 18) (3 1) (4 2)
(7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17)
(1 18) (5 2) (6 3) (7 4) (10 8) (9 12) (13 11)
(17 14) (18 15) (19 16) (4 1) (2 6) (5 3) (9 7)
(11 8) (13 10) (14 12) (17 15) (18 16) (2 19) (1 5)
(3 7) (6 4) (12 8) (13 9) (14 10) (15 11) (16 1)
(2 17) (3 18) (4 19) (8 5) (9 6) (10 7) (14 11)
(15 12) (16 13) (1 17) (18 2) (19 3) (8 4) (5 9)
(10 6) (11 7) (12 16) (17 13) (18 14) (19 15) (8 1)
(7 2) (9 3) (10 4) (11 5) (6 12) (13 18) (14 19)
(1 15) (2 16) (3 17) (4 9) (5 10) (6 11) (12 7)
(13 8) (1 14) (15 2) (16 3) (17 4) (5 18) (6 19)
(7 13) (14 8) (15 9) (16 10) (17 11) (18 12) (19 5)
(6 1) (8 2) (10 3) (11 4) (7 14) (9 16) (12 17)
(19 13) (3 15) (4 18) (7 1) (2 9) (12 5) (14 6)
(15 8) (17 10) (16 11) (1 13) (18 6) (7 19) (2 12)
(8 3) (13 4) (5 14) (9 17) (10 15) (11 18) (6 16)
(8 19) (9 1) (10 2) (3 11) (4 12) (13 5) (15 7)
(2 14) (4 16) (5 17) (18 7) (19 9) (1 10) (12 3)
(13 6) (16 8) (11 19) (3 14) (4 15) (17 7) (9 18)
(11 1) (2 13) (15 5) (17 6) (18 8) (19 10) (14 4)
(1 12) (5 16) (11 2) (3 13) (6 15) (8 17) (14 9)
(16 7) (10 18) (12 19)"
`;

exports[`should generate fiture for 20 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18)
(1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14) (17 20) (19 18)
(5 1) (6 2) (7 3) (8 4) (13 9) (14 10) (15 11) (16 12) (-1 -1) (-1 -1)
(1 17) (2 18) (3 19) (4 20) (9 5) (10 6) (11 7) (12 8) (-1 -1) (-1 -1)
(17 13) (18 14) (19 15) (20 16) (6 1) (5 2) (8 3) (7 4) (-1 -1) (-1 -1)
(14 9) (13 10) (16 11) (15 12) (2 17) (1 18) (4 19) (3 20) (-1 -1) (-1 -1)
(10 5) (9 6) (12 7) (11 8) (18 13) (17 14) (20 15) (19 16) (-1 -1) (-1 -1)
(1 7) (2 8) (5 3) (6 4) (9 15) (10 16) (13 11) (14 12) (-1 -1) (-1 -1)
(17 3) (18 4) (1 19) (2 20) (11 5) (12 6) (9 7) (10 8) (-1 -1) (-1 -1)
(19 13) (20 14) (17 15) (18 16) (8 1) (7 2) (6 3) (5 4) (-1 -1) (-1 -1)
(16 9) (15 10) (14 11) (13 12) (4 17) (3 18) (2 19) (1 20) (-1 -1) (-1 -1)
(12 5) (11 6) (10 7) (9 8) (20 13) (19 14) (18 15) (17 16) (-1 -1) (-1 -1)
(9 1) (10 2) (3 11) (4 12) (13 5) (14 6) (15 7) (16 8) (-1 -1) (-1 -1)
(5 17) (6 18) (7 19) (8 20) (1 10) (2 9) (12 3) (11 4) (-1 -1) (-1 -1)
(13 1) (14 2) (3 15) (4 16) (6 17) (5 18) (8 19) (7 20) (-1 -1) (-1 -1)
(17 9) (18 10) (19 11) (20 12) (2 13) (1 14) (15 4) (16 3) (-1 -1) (-1 -1)
(14 5) (13 6) (16 7) (15 8) (18 9) (17 10) (20 11) (19 12) (-1 -1) (-1 -1)
(11 1) (12 2) (9 3) (10 4) (5 15) (6 16) (7 13) (8 14) (-1 -1) (-1 -1)"
`;

exports[`should generate fiture for 20 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(20 19) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14)
(19 17) (20 18) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16)
(15 14) (17 20) (19 18) (5 1) (6 2) (7 3) (8 4) (13 9) (10 16)
(14 11) (15 12) (1 17) (2 18) (3 19) (4 20) (9 5) (10 6) (13 7)
(11 8) (14 12) (17 15) (18 16) (1 19) (2 20) (5 3) (6 4) (9 7)
(10 8) (13 11) (16 12) (17 14) (18 15) (19 2) (20 1) (6 3) (5 4)
(7 10) (9 8) (15 11) (12 13) (18 14) (17 16) (4 19) (3 20) (1 6)
(2 5) (11 7) (12 8) (14 9) (13 10) (19 15) (20 16) (3 17) (1 18)
(7 2) (9 4) (10 5) (11 6) (8 13) (17 12) (19 14) (20 15) (16 1)
(18 3) (8 2) (4 7) (5 11) (6 9) (14 10) (12 19) (17 13) (15 1)
(2 16) (4 18) (5 20) (8 3) (12 6) (14 7) (15 9) (10 17) (19 11)
(18 13) (16 3) (6 20) (7 1) (9 2) (10 4) (12 5) (14 8) (11 17)
(13 19) (2 15) (16 4) (5 18) (20 7) (1 8) (3 9) (6 14) (-1 -1)
(15 10) (16 11) (18 12) (20 13) (2 17) (19 5) (9 1) (3 14) (-1 -1)
(11 4) (13 6) (7 12) (8 15) (18 10) (19 16) (17 5) (9 20) (1 14)
(10 2) (11 3) (4 12) (15 6) (16 7) (17 8) (1 13) (9 18) (14 20)
(6 19) (2 11) (3 10) (13 4) (5 15) (7 17) (8 16) (20 12) (-1 -1)
(6 18) (7 19) (10 1) (12 2) (13 3) (4 14) (16 5) (20 8) (17 9)
(18 11) (3 15) (8 19) (12 1) (2 13) (4 17) (14 5) (16 6) (20 10)
(15 7) (19 9) (1 11) (8 18) (14 2) (12 3) (5 13) (17 6) (-1 -1)
(15 4)"
`;

exports[`should generate fiture for 20 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(18 17) (20 19) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10)
(15 13) (16 14) (19 17) (20 18) (1 4) (3 2) (5 8) (7 6)
(9 12) (11 10) (13 16) (15 14) (17 20) (19 18) (5 1) (6 2)
(7 3) (8 4) (13 9) (14 10) (15 11) (16 12) (1 17) (2 18)
(3 19) (4 20) (9 5) (10 6) (11 7) (12 8) (17 13) (18 14)
(19 15) (20 16) (6 1) (5 2) (8 3) (7 4) (14 9) (13 10)
(16 11) (15 12) (2 17) (1 18) (4 19) (3 20) (10 5) (9 6)
(12 7) (11 8) (18 13) (17 14) (20 15) (19 16) (9 1) (10 2)
(5 3) (6 4) (13 7) (14 8) (17 11) (18 12) (1 15) (2 16)
(5 19) (6 20) (9 3) (10 4) (14 7) (13 8) (18 11) (17 12)
(2 15) (1 16) (19 6) (20 5) (3 10) (4 9) (7 17) (8 18)
(11 13) (12 14) (15 3) (16 4) (1 19) (2 20) (17 5) (18 6)
(9 7) (10 8) (14 11) (13 12) (4 15) (3 16) (19 2) (20 1)
(11 5) (12 6) (7 10) (8 9) (19 13) (20 14) (15 17) (16 18)
(7 1) (8 2) (6 3) (5 4) (15 9) (16 10) (11 19) (12 20)
(1 13) (2 14) (3 17) (4 18) (5 12) (6 11) (15 7) (16 8)
(17 9) (18 10) (13 20) (14 19) (8 1) (7 2) (11 3) (12 4)
(13 5) (14 6) (9 16) (10 15) (4 17) (3 18) (19 7) (20 8)
(10 1) (9 2) (5 14) (6 13) (20 11) (19 12) (18 15) (17 16)
(1 11) (2 12) (13 3) (14 4) (15 5) (16 6) (18 7) (17 8)
(9 19) (10 20) (12 1) (11 2) (3 14) (4 13) (5 16) (6 15)
(7 20) (8 19) (18 9) (17 10) (1 14) (2 13) (12 3) (11 4)
(5 18) (6 17) (16 7) (15 8) (20 9) (19 10)"
`;

exports[`should generate fiture for 21 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19)
(1 21) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14) (17 16) (19 18)
(21 20) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17)
(20 18) (2 21) (1 4) (5 3) (9 6) (10 7) (11 8) (14 12) (13 16) (17 15)
(21 18) (1 19) (2 20) (6 3) (7 4) (8 5) (12 9) (13 10) (14 11) (-1 -1)
(18 15) (19 16) (20 17) (3 21) (5 1) (6 2) (4 8) (9 7) (10 14) (13 11)
(15 12) (18 16) (21 17) (2 19) (1 20) (7 3) (6 4) (9 5) (10 8) (-1 -1)
(15 11) (16 12) (17 13) (18 14) (21 19) (3 20) (6 1) (5 2) (4 9) (-1 -1)
(11 7) (12 8) (15 10) (18 13) (17 14) (20 16) (19 3) (4 21) (9 1) (-1 -1)
(7 2) (10 5) (11 6) (8 13) (17 12) (14 19) (20 15) (16 21) (1 18) (3 9)
(8 2) (10 4) (5 11) (12 6) (13 7) (14 20) (19 15) (16 1) (3 17) (9 18)
(21 5) (2 10) (11 4) (13 6) (12 7) (14 8) (1 15) (16 3) (17 9) (-1 -1)
(2 18) (4 19) (5 20) (6 21) (7 14) (15 8) (16 10) (17 11) (1 12) (3 13)
(18 4) (19 5) (20 6) (21 7) (9 2) (8 16) (10 17) (11 1) (12 3) (-1 -1)
(19 13) (21 14) (2 15) (5 18) (4 20) (6 10) (7 16) (8 17) (3 11) (-1 -1)
(13 9) (18 12) (14 1) (15 21) (6 19) (20 7) (11 2) (16 4) (17 5) (8 3)
(14 9) (18 10) (19 12) (20 13) (4 15) (21 8) (7 1) (2 16) (17 6) (-1 -1)
(12 5) (15 9) (10 19) (18 11) (13 21) (2 14) (8 20) (1 17) (16 6) (-1 -1)
(10 3) (12 4) (5 13) (15 7) (9 19) (20 11) (6 14) (8 18) (17 2) (-1 -1)
(9 21) (1 10) (14 3) (13 4) (5 15) (7 18) (11 16) (20 12) (19 8) (-1 -1)
(21 10) (13 1) (12 2) (3 15) (4 14) (16 5) (18 6) (7 17) (9 20) (19 11)"
`;

exports[`should generate fiture for 21 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(20 19) (1 21) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14)
(17 16) (19 18) (21 20) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10)
(15 13) (16 14) (19 17) (20 18) (2 21) (1 4) (5 3) (9 6) (10 7)
(11 8) (14 12) (13 16) (17 15) (21 18) (1 19) (2 20) (6 3) (7 4)
(8 5) (12 9) (13 10) (14 11) (18 15) (19 16) (20 17) (3 21) (6 1)
(5 2) (4 8) (9 7) (10 14) (13 11) (15 12) (18 16) (21 17) (3 19)
(1 20) (6 2) (9 4) (10 5) (11 7) (12 8) (17 13) (18 14) (19 15)
(16 20) (4 21) (5 1) (7 2) (8 3) (10 6) (13 9) (15 11) (17 12)
(14 19) (21 16) (1 18) (20 3) (2 8) (6 4) (9 5) (12 7) (15 10)
(16 11) (18 13) (17 14) (21 19) (4 20) (7 1) (2 9) (3 10) (5 12)
(11 6) (8 13) (20 14) (21 15) (16 1) (2 17) (3 18) (19 4) (-1 -1)
(11 5) (12 6) (13 7) (10 8) (14 9) (20 15) (16 2) (1 17) (4 18)
(5 19) (6 21) (7 3) (14 8) (15 9) (16 10) (17 11) (18 12) (20 13)
(19 2) (5 21) (8 1) (9 3) (10 4) (13 6) (14 7) (18 11) (12 16)
(1 15) (3 17) (6 19) (5 20) (7 21) (2 10) (11 4) (8 16) (9 18)
(19 12) (21 13) (1 14) (15 2) (4 17) (6 20) (11 3) (16 5) (18 7)
(15 8) (17 9) (19 10) (20 12) (13 1) (21 14) (2 11) (3 16) (18 5)
(12 4) (14 6) (7 15) (17 8) (9 19) (10 20) (2 13) (11 21) (-1 -1)
(9 1) (12 3) (4 13) (14 5) (15 6) (16 7) (8 18) (17 10) (19 11)
(7 20) (8 21) (10 1) (12 2) (13 3) (4 14) (5 15) (6 16) (-1 -1)
(20 9) (5 17) (2 18) (7 19) (21 10) (1 11) (3 14) (15 4) (-1 -1)
(17 6) (19 8) (16 9) (21 12) (13 5) (10 18) (11 20) (14 2) (3 15)
(1 12) (4 16) (18 6)"
`;

exports[`should generate fiture for 21 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15)
(18 17) (20 19) (1 21) (3 2) (5 4) (7 6) (9 8) (11 10)
(13 12) (15 14) (17 16) (19 18) (21 20) (3 1) (4 2) (7 5)
(8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18) (2 21)
(1 4) (5 3) (9 6) (10 7) (11 8) (14 12) (13 16) (17 15)
(21 18) (1 19) (2 20) (6 3) (7 4) (8 5) (12 9) (13 10)
(14 11) (18 15) (19 16) (20 17) (3 21) (5 1) (6 2) (4 8)
(9 7) (10 14) (13 11) (15 12) (18 16) (21 17) (2 19) (1 20)
(7 3) (6 4) (9 5) (10 8) (15 11) (16 12) (17 13) (18 14)
(21 19) (3 20) (6 1) (5 2) (4 9) (11 7) (12 8) (15 10)
(18 13) (17 14) (20 16) (19 3) (4 21) (7 1) (8 2) (10 5)
(11 6) (13 9) (17 12) (14 19) (20 15) (16 21) (1 18) (2 7)
(8 3) (10 4) (5 11) (12 6) (14 9) (19 13) (21 15) (16 1)
(2 17) (3 18) (4 20) (12 5) (6 10) (13 7) (14 8) (9 15)
(16 11) (1 17) (18 2) (19 4) (5 20) (21 6) (9 3) (7 12)
(8 13) (16 10) (17 11) (20 14) (15 19) (4 18) (5 21) (9 1)
(10 2) (11 3) (13 6) (14 7) (15 8) (18 12) (4 16) (17 5)
(6 19) (7 20) (8 21) (1 10) (2 9) (3 12) (11 18) (13 4)
(21 14) (1 15) (2 16) (3 17) (19 5) (20 6) (18 7) (11 4)
(16 8) (17 9) (19 10) (12 20) (21 13) (14 1) (15 2) (5 18)
(10 3) (6 14) (7 15) (8 17) (9 16) (19 11) (12 21) (20 13)
(8 1) (11 2) (3 13) (12 4) (14 5) (15 6) (16 7) (18 9)
(17 10) (7 19) (20 8) (9 21) (1 11) (2 12) (3 14) (4 15)
(13 5) (6 16) (10 18) (4 17) (8 19) (9 20) (21 7) (12 1)
(13 2) (15 3) (5 16) (17 6) (20 10) (21 11) (14 4) (18 8)
(19 9) (1 13) (2 14) (16 3) (5 15) (6 18) (7 17) (10 21)
(11 20) (19 12)"
`;

exports[`should generate fiture for 22 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19) (22 21)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18) (-1 -1)
(1 21) (2 22) (5 3) (6 4) (9 7) (10 8) (13 11) (14 12) (17 15) (18 16) (-1 -1)
(21 19) (22 20) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14) (-1 -1)
(17 20) (19 18) (21 2) (1 22) (6 3) (5 4) (10 7) (9 8) (14 11) (13 12) (-1 -1)
(18 15) (17 16) (22 19) (21 20) (5 1) (2 6) (7 3) (8 4) (13 9) (14 10) (-1 -1)
(15 11) (16 12) (21 17) (22 18) (19 1) (20 2) (3 8) (4 7) (9 5) (10 6) (-1 -1)
(11 16) (12 15) (17 13) (18 14) (2 19) (1 20) (3 21) (4 22) (10 5) (6 9) (-1 -1)
(11 7) (12 8) (18 13) (17 14) (19 15) (20 16) (4 21) (3 22) (6 1) (5 2) (-1 -1)
(7 12) (8 11) (14 9) (13 10) (15 20) (16 19) (22 17) (21 18) (-1 -1) (-1 -1) (-1 -1)
(7 1) (8 2) (9 3) (10 4) (11 5) (12 6) (19 13) (20 14) (15 21) (16 22) (-1 -1)
(1 17) (2 18) (3 10) (9 4) (12 5) (11 6) (13 7) (14 8) (22 15) (21 16) (-1 -1)
(2 17) (1 18) (19 3) (4 20) (5 13) (6 14) (15 7) (16 8) (21 9) (22 10) (-1 -1)
(17 11) (18 12) (4 19) (20 3) (8 1) (7 2) (14 5) (13 6) (15 9) (16 10) (-1 -1)
(18 11) (17 12) (5 19) (6 20) (7 21) (8 22) (9 1) (10 2) (3 13) (14 4) (-1 -1)
(19 11) (20 12) (1 15) (2 16) (3 17) (4 18) (5 21) (6 22) (7 14) (13 8) (-1 -1)
(16 9) (15 10) (11 20) (12 19) (17 4) (18 3) (21 6) (22 5) (1 13) (2 14) (-1 -1)
(16 7) (8 15) (9 17) (10 18) (11 21) (12 22) (19 6) (20 5) (14 1) (13 2) (-1 -1)
(11 3) (12 4) (17 7) (18 8) (19 9) (20 10) (2 15) (1 16) (21 13) (22 14) (-1 -1)
(3 12) (4 11) (15 5) (6 16) (7 18) (8 17) (9 20) (10 19) (14 21) (13 22) (-1 -1)
(10 1) (9 2) (15 3) (16 4) (5 17) (18 6) (19 7) (20 8) (22 11) (21 12) (-1 -1)"
`;

exports[`should generate fiture for 22 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19)
(22 21) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17)
(20 18) (1 21) (2 22) (5 3) (6 4) (9 7) (10 8) (13 11) (14 12) (17 15)
(18 16) (21 19) (22 20) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (17 13)
(15 14) (19 16) (21 18) (1 20) (3 22) (5 2) (7 4) (9 6) (11 8) (13 10)
(15 12) (17 14) (20 16) (19 18) (2 21) (22 1) (6 3) (4 5) (10 7) (8 9)
(14 11) (13 12) (18 15) (16 17) (22 19) (21 20) (5 1) (6 2) (7 3) (8 4)
(13 9) (14 10) (15 11) (12 16) (20 17) (18 22) (1 19) (3 21) (2 7) (-1 -1)
(9 4) (10 5) (11 6) (12 8) (16 13) (18 14) (19 15) (21 17) (2 20) (7 22)
(6 1) (8 3) (4 10) (9 5) (16 11) (17 12) (13 18) (19 14) (20 15) (21 7)
(4 22) (1 8) (9 2) (10 3) (11 5) (12 6) (19 13) (14 20) (15 21) (7 16)
(22 17) (1 18) (8 2) (3 9) (11 4) (5 12) (10 6) (20 13) (21 14) (15 7)
(22 16) (17 1) (2 18) (3 19) (12 4) (13 5) (14 6) (15 8) (20 9) (21 10)
(17 11) (16 1) (18 3) (2 19) (5 22) (4 13) (6 15) (12 7) (14 8) (9 21)
(16 10) (18 11) (17 2) (4 19) (3 20) (6 22) (7 1) (5 14) (13 8) (15 9)
(10 17) (19 11) (18 12) (21 16) (4 20) (8 22) (1 9) (13 2) (14 3) (5 15)
(16 6) (11 7) (10 18) (19 12) (3 17) (20 5) (4 21) (22 9) (1 13) (2 14)
(17 6) (7 18) (8 16) (15 10) (11 20) (12 21) (5 19) (22 13) (14 1) (-1 -1)
(10 2) (11 3) (15 4) (6 18) (17 7) (19 8) (9 16) (20 12) (21 5) (22 14)
(1 10) (2 11) (12 3) (16 4) (13 6) (7 19) (8 17) (18 9) (22 15) (-1 -1)
(6 20) (8 21) (11 1) (12 2) (3 13) (14 4) (16 5) (9 17) (19 10) (-1 -1)
(20 7) (1 15) (4 18) (6 21) (10 22) (2 16) (17 5) (9 14) (-1 -1) (-1 -1)
(3 15) (13 7) (18 8) (21 11) (22 12) (6 19) (10 20) (17 4) (-1 -1) (-1 -1)
(12 1)"
`;

exports[`should generate fiture for 22 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(20 19) (22 21) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13)
(16 14) (19 17) (20 18) (1 21) (2 22) (5 3) (6 4) (9 7) (10 8)
(13 11) (14 12) (17 15) (18 16) (21 19) (22 20) (1 4) (3 2) (5 8)
(7 6) (9 12) (11 10) (13 16) (15 14) (17 20) (19 18) (21 2) (1 22)
(6 3) (5 4) (10 7) (9 8) (14 11) (13 12) (18 15) (17 16) (22 19)
(21 20) (5 1) (2 6) (7 3) (8 4) (13 9) (14 10) (15 11) (16 12)
(21 17) (22 18) (19 1) (20 2) (3 8) (4 7) (9 5) (10 6) (11 16)
(12 15) (17 13) (18 14) (2 19) (1 20) (3 21) (4 22) (10 5) (6 9)
(11 7) (12 8) (18 13) (17 14) (19 15) (20 16) (4 21) (3 22) (6 1)
(5 2) (7 12) (8 11) (14 9) (13 10) (15 20) (16 19) (22 17) (21 18)
(7 1) (8 2) (9 3) (10 4) (11 5) (12 6) (19 13) (20 14) (15 21)
(16 22) (1 17) (2 18) (3 10) (9 4) (12 5) (11 6) (13 7) (14 8)
(22 15) (21 16) (2 17) (1 18) (19 3) (4 20) (5 13) (6 14) (-1 -1)
(15 7) (16 8) (17 9) (18 10) (19 11) (20 12) (5 21) (6 22) (13 1)
(7 2) (11 3) (12 4) (8 15) (16 9) (17 10) (14 19) (18 5) (20 6)
(7 21) (8 22) (9 1) (10 2) (3 12) (4 11) (20 13) (5 14) (15 6)
(1 16) (3 17) (4 18) (7 19) (21 8) (22 9) (2 11) (15 10) (6 13)
(17 12) (21 14) (2 16) (18 3) (19 4) (5 20) (22 7) (8 1) (9 15)
(16 10) (11 17) (12 18) (13 21) (14 22) (19 5) (3 20) (1 15) (9 2)
(13 4) (16 6) (14 7) (17 8) (10 19) (18 11) (21 12) (20 9) (22 5)
(10 1) (12 2) (13 3) (4 14) (6 17) (7 16) (8 18) (11 20) (15 5)
(6 19) (9 21) (10 22) (1 11) (2 13) (14 3) (15 4) (17 7) (20 8)
(19 12) (3 16) (18 6) (21 10) (11 22) (1 14) (2 15) (4 17) (7 20)
(16 5) (8 13) (18 9) (22 12) (6 21) (14 2) (15 3) (20 10) (-1 -1)
(8 19) (12 1) (16 4) (5 17) (7 18) (21 11)"
`;

exports[`should generate fiture for 23 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19) (22 21)
(1 23) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14) (17 16) (19 18) (21 20)
(23 22) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18)
(23 21) (1 22) (5 2) (6 3) (7 4) (10 8) (9 12) (13 11) (17 14) (18 15) (19 16)
(22 20) (21 1) (2 23) (5 3) (6 4) (9 7) (11 8) (13 10) (14 12) (17 15) (18 16)
(21 19) (23 20) (2 22) (4 1) (3 7) (8 5) (9 6) (14 10) (15 11) (16 12) (17 13)
(21 18) (22 19) (1 20) (3 23) (6 2) (8 4) (5 9) (10 7) (14 11) (12 15) (16 13)
(20 17) (22 18) (23 19) (2 21) (1 5) (8 3) (4 9) (10 6) (11 7) (-1 -1) (-1 -1)
(12 17) (18 13) (19 14) (20 15) (21 16) (3 22) (4 23) (6 1) (7 2) (10 5) (-1 -1)
(12 8) (13 9) (16 11) (18 14) (15 19) (17 21) (2 20) (22 4) (5 23) (7 1) (10 3)
(11 6) (13 8) (14 9) (18 12) (15 21) (20 16) (22 17) (1 19) (23 7) (2 10) (-1 -1)
(9 3) (11 4) (12 5) (13 6) (14 8) (15 22) (23 16) (1 17) (2 18) (19 7) (20 10)
(3 21) (4 12) (5 11) (6 14) (8 15) (16 9) (19 13) (17 23) (1 18) (7 20) (10 22)
(21 4) (8 2) (11 3) (13 5) (12 6) (9 15) (20 14) (22 16) (7 17) (23 18) (19 10)
(5 21) (8 1) (9 2) (3 12) (4 13) (15 6) (17 11) (14 22) (16 7) (18 10) (-1 -1)
(2 19) (3 20) (6 21) (23 8) (9 1) (14 4) (15 5) (18 11) (22 12) (7 13) (10 16)
(17 2) (19 3) (4 20) (21 8) (6 23) (11 1) (5 14) (18 9) (12 7) (13 22) (10 15)
(1 16) (3 17) (4 19) (20 5) (21 9) (11 23) (12 2) (6 18) (22 8) (7 14) (-1 -1)
(20 13) (23 15) (16 2) (17 4) (5 19) (21 10) (1 12) (14 3) (22 6) (8 18) (-1 -1)
(9 17) (19 11) (13 21) (15 1) (16 3) (6 20) (10 23) (2 14) (18 4) (5 22) (-1 -1)
(15 7) (16 8) (19 9) (20 11) (21 12) (23 13) (17 5) (1 10) (3 18) (-1 -1) (-1 -1)
(11 2) (4 15) (16 6) (7 21) (8 17) (9 20) (12 19) (13 1) (14 23) (18 5) (-1 -1)
(7 22) (2 13) (15 3) (10 4) (17 6) (19 8) (23 9) (21 11) (20 12) (1 14) (5 16)"
`;

exports[`should generate fiture for 23 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19)
(22 21) (1 23) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12) (15 14) (17 16)
(19 18) (21 20) (23 22) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13)
(16 14) (19 17) (20 18) (23 21) (1 22) (5 2) (6 3) (7 4) (10 8) (9 12)
(13 11) (17 14) (18 15) (19 16) (22 20) (21 1) (2 23) (5 3) (6 4) (9 7)
(11 8) (13 10) (14 12) (17 15) (18 16) (21 19) (23 20) (2 22) (4 1) (3 7)
(8 5) (9 6) (14 10) (15 11) (16 12) (17 13) (21 18) (22 19) (1 20) (3 23)
(6 2) (8 4) (5 9) (10 7) (14 11) (12 15) (16 13) (20 17) (22 18) (23 19)
(2 21) (1 5) (8 3) (4 9) (10 6) (11 7) (12 17) (18 13) (19 14) (20 15)
(21 16) (3 22) (4 23) (6 1) (7 2) (10 5) (12 8) (13 9) (17 11) (18 14)
(15 19) (20 16) (3 21) (22 4) (5 23) (7 1) (2 8) (11 6) (14 9) (17 10)
(18 12) (19 13) (15 21) (16 22) (2 20) (23 6) (1 8) (9 3) (10 4) (11 5)
(12 7) (13 20) (21 14) (22 15) (23 16) (1 17) (2 18) (19 3) (4 11) (-1 -1)
(5 12) (13 6) (14 7) (15 8) (16 9) (18 10) (21 17) (1 19) (20 3) (11 22)
(7 23) (9 2) (12 4) (13 5) (6 14) (8 16) (15 10) (22 17) (1 18) (19 11)
(4 20) (5 21) (8 23) (10 2) (3 12) (6 15) (7 13) (17 9) (14 22) (16 1)
(23 18) (2 19) (20 5) (4 21) (10 3) (12 6) (15 7) (13 8) (9 22) (16 11)
(20 14) (23 17) (3 18) (19 4) (6 21) (9 1) (11 2) (5 15) (7 16) (22 8)
(19 10) (20 12) (21 13) (14 23) (17 2) (18 4) (11 1) (15 3) (16 5) (22 6)
(17 7) (8 14) (18 9) (10 20) (12 19) (23 13) (21 11) (1 15) (2 16) (5 22)
(13 3) (14 4) (6 17) (7 18) (8 19) (9 20) (21 10) (23 12) (15 2) (-1 -1)
(10 1) (3 11) (4 13) (14 5) (16 6) (19 7) (17 8) (9 21) (22 12) (15 23)
(5 18) (6 20) (12 1) (13 2) (3 14) (4 16) (7 21) (19 9) (22 10) (11 23)
(18 8) (3 17) (20 7) (1 13) (2 12) (4 15) (5 19) (23 9) (16 10) (-1 -1)
(18 6) (8 20) (1 14) (17 4) (12 21) (7 22) (16 3) (9 15) (10 23) (-1 -1)
(11 18) (14 2) (17 5)"
`;

exports[`should generate fiture for 23 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17)
(20 19) (22 21) (1 23) (3 2) (5 4) (7 6) (9 8) (11 10) (13 12)
(15 14) (17 16) (19 18) (21 20) (23 22) (3 1) (4 2) (7 5) (8 6)
(11 9) (12 10) (15 13) (16 14) (19 17) (20 18) (23 21) (1 22) (5 2)
(6 3) (7 4) (10 8) (9 12) (13 11) (17 14) (18 15) (19 16) (22 20)
(21 1) (2 23) (5 3) (6 4) (9 7) (11 8) (13 10) (14 12) (17 15)
(18 16) (21 19) (23 20) (2 22) (4 1) (3 7) (8 5) (9 6) (14 10)
(15 11) (16 12) (17 13) (21 18) (22 19) (1 20) (3 23) (6 2) (8 4)
(5 9) (10 7) (14 11) (12 15) (16 13) (20 17) (22 18) (23 19) (2 21)
(1 5) (8 3) (4 9) (10 6) (11 7) (12 17) (18 13) (19 14) (20 15)
(21 16) (3 22) (4 23) (6 1) (7 2) (10 5) (12 8) (13 9) (17 11)
(18 14) (15 19) (20 16) (3 21) (22 4) (5 23) (7 1) (2 8) (11 6)
(14 9) (15 10) (18 12) (19 13) (16 22) (21 17) (2 20) (23 6) (1 8)
(9 3) (10 4) (11 5) (12 7) (13 20) (14 21) (22 15) (23 16) (1 17)
(2 18) (19 3) (4 11) (5 12) (13 6) (7 14) (15 8) (16 9) (17 10)
(23 18) (1 19) (20 3) (4 21) (5 22) (9 2) (6 12) (13 7) (8 14)
(16 10) (18 11) (21 15) (22 17) (19 2) (20 4) (7 23) (9 1) (12 3)
(13 5) (14 6) (8 16) (10 18) (11 19) (15 23) (17 2) (7 20) (9 21)
(6 22) (10 1) (3 11) (12 4) (14 5) (8 13) (2 15) (16 7) (23 17)
(1 18) (4 19) (5 20) (6 21) (22 8) (3 10) (15 9) (11 16) (23 12)
(21 13) (20 14) (17 3) (18 4) (19 5) (7 22) (11 1) (10 2) (15 6)
(17 8) (18 9) (19 12) (22 13) (14 23) (1 16) (6 20) (5 21) (2 11)
(13 3) (4 14) (15 7) (8 18) (9 17) (19 10) (20 12) (16 2) (21 11)
(9 22) (8 23) (12 1) (3 14) (13 4) (5 15) (16 6) (17 7) (20 10)
(3 18) (6 19) (7 21) (10 22) (23 9) (1 13) (12 2) (4 15) (16 5)
(19 8) (11 20) (22 14) (4 17) (18 5) (21 10) (13 23) (15 1) (3 16)
(14 2) (17 6) (18 7) (20 8) (9 19) (22 11) (21 12) (10 23) (15 3)
(14 1) (2 13) (16 4) (5 17) (6 18) (7 19) (8 21) (20 9) (23 11)
(12 22)"
`;

exports[`should generate fiture for 24 teams with 0 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19) (22 21) (24 23)
(3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18) (23 21) (24 22)
(1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14) (17 20) (19 18) (21 24) (23 22)
(5 1) (6 2) (7 3) (8 4) (13 9) (14 10) (15 11) (16 12) (21 17) (22 18) (23 19) (24 20)
(1 6) (2 5) (3 8) (4 7) (9 14) (10 13) (11 16) (12 15) (17 22) (18 21) (19 24) (20 23)
(1 7) (2 8) (5 3) (6 4) (9 15) (10 16) (13 11) (14 12) (17 23) (18 24) (21 19) (22 20)
(8 1) (7 2) (6 3) (5 4) (16 9) (15 10) (14 11) (13 12) (24 17) (23 18) (22 19) (21 20)
(9 1) (10 2) (11 3) (12 4) (13 5) (14 6) (15 7) (16 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(1 17) (2 18) (3 19) (4 20) (5 21) (6 22) (7 23) (8 24) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(17 9) (18 10) (19 11) (20 12) (21 13) (22 14) (23 15) (24 16) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(10 1) (9 2) (12 3) (11 4) (14 5) (13 6) (16 7) (15 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(2 17) (1 18) (4 19) (3 20) (6 21) (5 22) (8 23) (7 24) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(18 9) (17 10) (20 11) (19 12) (22 13) (21 14) (24 15) (23 16) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(11 1) (12 2) (9 3) (10 4) (15 5) (16 6) (13 7) (14 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(3 17) (4 18) (1 19) (2 20) (7 21) (8 22) (5 23) (6 24) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(19 9) (20 10) (17 11) (18 12) (23 13) (24 14) (21 15) (22 16) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(12 1) (11 2) (10 3) (9 4) (16 5) (15 6) (14 7) (13 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(4 17) (3 18) (2 19) (1 20) (8 21) (7 22) (6 23) (5 24) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(20 9) (19 10) (18 11) (17 12) (24 13) (23 14) (22 15) (21 16) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(1 13) (2 14) (3 15) (4 16) (9 5) (10 6) (11 7) (12 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(17 5) (18 6) (19 7) (20 8) (1 21) (2 22) (3 23) (4 24) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(21 9) (22 10) (23 11) (24 12) (17 13) (18 14) (19 15) (20 16) (-1 -1) (-1 -1) (-1 -1) (-1 -1)
(14 1) (13 2) (16 3) (15 4) (10 5) (9 6) (12 7) (11 8) (-1 -1) (-1 -1) (-1 -1) (-1 -1)"
`;

exports[`should generate fiture for 24 teams with 1 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19) (22 21)
(24 23) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14) (19 17) (20 18)
(23 21) (24 22) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10) (13 16) (15 14) (17 20)
(19 18) (21 24) (23 22) (5 1) (6 2) (7 3) (8 4) (13 9) (14 10) (15 11) (16 12)
(21 17) (22 18) (23 19) (24 20) (1 6) (2 5) (3 8) (4 7) (9 14) (10 13) (11 16)
(12 15) (17 22) (18 21) (19 24) (20 23) (1 7) (2 8) (5 3) (6 4) (9 16) (13 11)
(10 15) (14 12) (17 23) (18 24) (21 19) (22 20) (8 1) (7 2) (6 3) (5 4) (-1 -1)
(15 9) (16 10) (14 11) (13 12) (24 17) (23 18) (22 19) (21 20) (-1 -1) (-1 -1) (-1 -1)
(9 1) (10 2) (11 3) (12 4) (13 5) (14 6) (15 7) (16 8) (-1 -1) (-1 -1) (-1 -1)
(1 17) (2 18) (3 19) (4 20) (5 21) (6 22) (7 23) (8 24) (-1 -1) (-1 -1) (-1 -1)
(17 9) (18 10) (19 11) (20 12) (21 13) (22 14) (23 15) (24 16) (-1 -1) (-1 -1) (-1 -1)
(10 1) (9 2) (12 3) (11 4) (14 5) (13 6) (16 7) (15 8) (-1 -1) (-1 -1) (-1 -1)
(2 17) (1 18) (4 19) (3 20) (6 21) (5 22) (8 23) (7 24) (-1 -1) (-1 -1) (-1 -1)
(18 9) (17 10) (20 11) (19 12) (22 13) (21 14) (24 15) (23 16) (-1 -1) (-1 -1) (-1 -1)
(11 1) (12 2) (9 3) (10 4) (15 5) (16 6) (13 7) (14 8) (-1 -1) (-1 -1) (-1 -1)
(3 17) (4 18) (1 19) (2 20) (7 21) (8 22) (5 23) (6 24) (-1 -1) (-1 -1) (-1 -1)
(19 9) (20 10) (17 11) (18 12) (23 13) (24 14) (21 15) (22 16) (-1 -1) (-1 -1) (-1 -1)
(12 1) (11 2) (10 3) (9 4) (16 5) (15 6) (14 7) (13 8) (-1 -1) (-1 -1) (-1 -1)
(4 17) (3 18) (2 19) (1 20) (8 21) (7 22) (6 23) (5 24) (-1 -1) (-1 -1) (-1 -1)
(20 9) (19 10) (18 11) (17 12) (24 13) (23 14) (22 15) (21 16) (-1 -1) (-1 -1) (-1 -1)
(1 13) (2 14) (3 15) (4 16) (9 5) (10 6) (11 7) (12 8) (-1 -1) (-1 -1) (-1 -1)
(17 5) (18 6) (19 7) (20 8) (1 21) (2 22) (3 23) (4 24) (-1 -1) (-1 -1) (-1 -1)
(21 9) (22 10) (23 11) (24 12) (17 13) (18 14) (19 15) (20 16) (-1 -1) (-1 -1) (-1 -1)
(14 1) (13 2) (16 3) (15 4) (10 5) (9 6) (12 7) (11 8) (-1 -1) (-1 -1) (-1 -1)
(6 17) (5 18) (8 19) (7 20) (2 21) (1 22) (4 23) (3 24) (-1 -1) (-1 -1) (-1 -1)
(22 9)"
`;

exports[`should generate fiture for 24 teams with 2 extrabye 1`] = `
"(2 1) (4 3) (6 5) (8 7) (10 9) (12 11) (14 13) (16 15) (18 17) (20 19)
(22 21) (24 23) (3 1) (4 2) (7 5) (8 6) (11 9) (12 10) (15 13) (16 14)
(19 17) (20 18) (23 21) (24 22) (1 4) (3 2) (5 8) (7 6) (9 12) (11 10)
(13 16) (15 14) (17 20) (19 18) (21 24) (23 22) (5 1) (6 2) (7 3) (8 4)
(13 9) (14 10) (15 11) (16 12) (21 17) (22 18) (23 19) (24 20) (1 6) (2 5)
(3 8) (4 7) (9 14) (10 13) (11 16) (12 15) (17 22) (18 21) (19 24) (20 23)
(1 7) (2 8) (5 3) (6 4) (9 15) (10 16) (13 11) (14 12) (17 23) (18 24)
(21 19) (22 20) (8 1) (7 2) (6 3) (5 4) (16 9) (15 10) (14 11) (13 12)
(24 17) (23 18) (22 19) (21 20) (9 1) (10 2) (11 3) (12 4) (13 5) (14 6)
(15 7) (16 8) (1 17) (2 18) (3 19) (4 20) (5 21) (6 22) (9 23) (10 24)
(11 7) (12 8) (17 13) (18 14) (19 15) (20 16) (1 21) (2 22) (3 23) (4 24)
(9 5) (10 6) (7 12) (8 11) (18 13) (17 14) (20 15) (19 16) (21 2) (22 1)
(23 4) (24 3) (5 10) (6 9) (13 7) (14 8) (17 11) (18 12) (21 15) (22 16)
(1 19) (2 20) (23 5) (24 6) (3 9) (4 10) (7 14) (8 13) (11 18) (12 17)
(15 22) (16 21) (19 2) (20 1) (6 23) (5 24) (10 3) (9 4) (17 7) (18 8)
(19 11) (20 12) (21 13) (22 14) (23 15) (24 16) (1 10) (2 9) (3 17) (4 18)
(11 5) (12 6) (16 7) (15 8) (13 19) (14 20) (3 21) (4 22) (1 23) (2 24)
(12 5) (11 6) (7 9) (8 10) (20 13) (19 14) (17 15) (18 16) (21 4) (22 3)
(23 2) (24 1) (14 5) (13 6) (10 7) (9 8) (20 11) (19 12) (15 18) (16 17)
(6 21) (5 22) (7 23) (8 24) (11 1) (12 2) (13 3) (14 4) (17 9) (18 10)
(24 15) (23 16) (4 19) (3 20) (7 21) (8 22) (1 12) (2 11) (5 17) (6 18)
(9 19) (10 20) (22 13) (21 14) (15 1) (16 2) (8 23) (7 24) (12 3) (11 4)
(15 5) (16 6) (18 9) (17 10) (23 13) (24 14) (19 7) (20 8) (21 11) (22 12)
(13 1) (14 2) (3 15) (4 16) (5 18) (6 17) (9 20) (10 19) (8 21) (7 22)
(10 23) (9 24) (1 14) (2 13) (16 3) (15 4) (19 5) (20 6) (22 11) (21 12)
(2 17) (1 18) (11 23) (12 24) (14 3) (13 4) (5 16) (6 15) (20 7) (19 8)
(21 9) (22 10) (4 17) (3 18) (23 12) (24 11) (16 1) (15 2) (5 20) (6 19)
(18 7) (17 8) (9 22) (10 21) (24 13) (23 14)"
`;
